option java_package = "com.app.empire.protocol.pb.scene";
option java_outer_classname = "PlayerLeaveGridProto";

message PlayerLeaveGridMsg {
	optional int64 id = 1; //离开自己九宫格区域位置
}

